@@ -1,11 +1,11 @@
 
 
 This archive contains the distribution Weather-WWO,
-version 0.04:
+version 0.05:
 
   World Weather Online Data
 
-This software is copyright (c) 2011 by Mateu X Hunter.
+This software is copyright (c) 2010 by Mateu Hunter C<hunter@missoula.org>.
 
 This is free software; you can redistribute it and/or modify it under
 the same terms as the Perl 5 programming language system itself.
