@@ -1,8 +1,7 @@
 name = Weather-WWO
 abstract = World Weather Online Data
-version = 0.04
+version = 0.05
 
-;[Git::NextVersion]
 [PkgVersion]
 [NextRelease]
 
@@ -11,7 +10,6 @@ version = 0.04
 [@Basic]
 
 [PodSyntaxTests]
-[PodCoverageTests]
-[CriticTests]
-
+[Test::Perl::Critic]
+[LicenseFromModule]
 [AutoPrereqs]
